[package]
name = "kreuzcrawl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance web crawling engine"

[package.metadata.cargo-machete]
ignored = ["base64", "getrandom", "memchr"]

[features]
default = ["native-runtime"]
native-runtime = [
    "tokio/rt-multi-thread",
    "tokio/net",
    "tokio/fs",
    "tokio/signal",
    "tokio/process",
    "tokio/io-util",
]
browser = ["dep:chromiumoxide", "dep:dirs", "native-runtime"]
ai = ["dep:liter-llm", "dep:minijinja"]
tracing = ["dep:tracing"]
interact = ["browser"]
mcp = ["dep:rmcp", "dep:schemars"]
api = [
    "dep:axum",
    "dep:tower-http",
    "dep:utoipa",
    "dep:uuid",
    "dep:dashmap",
    "dep:base64",
    "native-runtime",
]
mcp-http = ["mcp", "api"]
warc = ["dep:uuid"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
blake3 = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
chrono = { workspace = true }
dashmap = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true }
html-to-markdown-rs = { workspace = true }
liter-llm = { workspace = true, optional = true }
memchr = { workspace = true }
minijinja = { workspace = true, optional = true }
quick-xml = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tl = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
