[package]
name = "kreuzcrawl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance web crawling engine"

[package.metadata.cargo-machete]
ignored = ["base64", "getrandom", "getrandom03", "memchr"]

[features]
default = ["native-runtime"]
# native-runtime marks that the crate is running on a real OS (not wasm32).
# The actual OS-specific tokio sub-features (net, fs, signal, process, io-util,
# rt-multi-thread) are activated via the [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# section below, so they are never compiled for wasm32 targets regardless of which
# features are enabled.  This keeps the feature flag meaningful for optional
# native-only deps (chromiumoxide, axum, …) while avoiding the mio compile
# error that occurs when tokio's net/fs/signal/process features are requested
# on wasm32-unknown-unknown.
native-runtime = []
browser = ["browser-chromiumoxide"]
browser-chromiumoxide = ["dep:chromiumoxide", "dep:dirs", "native-runtime"]
browser-native = ["dep:kreuzcrawl-browser", "native-runtime"]
ai = ["dep:liter-llm", "dep:minijinja"]
tracing = ["dep:tracing"]
interact = ["browser"]
mcp = ["dep:rmcp", "dep:schemars"]
api = [
    "dep:axum",
    "dep:tower-http",
    "dep:utoipa",
    "dep:uuid",
    "dep:dashmap",
    "dep:base64",
    "native-runtime",
]
mcp-http = ["mcp", "api"]
warc = ["dep:uuid"]
full = ["browser", "browser-native", "ai", "tracing", "interact", "mcp", "api", "mcp-http", "warc"]

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
blake3 = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
chrono = { workspace = true }
dashmap = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true }
html-to-markdown-rs = { workspace = true }
kreuzcrawl-browser = { workspace = true, optional = true }
liter-llm = { workspace = true, optional = true }
memchr = { workspace = true }
minijinja = { workspace = true, optional = true }
quick-xml = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tl = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# On non-wasm targets, activate the OS-specific tokio features that pull in mio.
# These cannot be listed inside the `native-runtime` feature because Cargo feature
# activations are not target-conditional; putting them here ensures they are never
# requested on wasm32-unknown-unknown.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "signal",
    "process",
    "io-util",
] }

# wasm32: getrandom must use the JS backend for both the v0.3 and v0.4 API
# surfaces that appear in the dependency tree.
# - getrandom v0.4 is declared directly (also listed in cargo-machete ignore).
# - getrandom v0.3 is pulled transitively by ahash; we force the wasm_js feature
#   here using a package-rename alias so Cargo merges it into the resolved v0.3.x.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
