[package]
name = "benchmark-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "benchmark_harness"
path = "src/lib.rs"

[[bin]]
name = "benchmark-harness"
path = "src/main.rs"

[features]
default = []
profiling = ["pprof"]
memory-profiling = ["tikv-jemallocator", "tikv-jemalloc-ctl"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
kreuzcrawl = { path = "../../crates/kreuzcrawl", features = ["browser"] }
num_cpus = "1"

pprof = { version = "0.15", features = ["flamegraph", "criterion"], optional = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sysinfo = "0.38"
tempfile = { workspace = true }
thiserror = { workspace = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemallocator = { version = "0.6", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
